--- a/index.Rmd
+++ b/index.Rmd
@@ -75,7 +75,8 @@ class: left, hide_logo
 background-image: url("img/background.png")
 background-size: cover
 
-### Strengths-based interventions in schools: A first trial in inclusive context with 11-12 y.o. children
+### Strengths-based interventions in schools:
+### A first trial in inclusive context with 11-12 y.o. children
 
 ```{r xaringan-logo, echo=FALSE}
 library(xaringanExtra)
@@ -94,7 +95,7 @@ use_progress_bar(color = "#d2202b", location = "top")
 .pull-left[
 
 ```{r affiliation}
-#| out.width: 50%
+#| out.width: 45%
 
 library(knitr)
 
@@ -142,31 +143,27 @@ background-size: cover
 
 --
 
-1. Le cas des forces de caractère
+1. The case of character strengths
 
 --
 
-1. Dispositif prévu (matériel, coeur, N, etc)
+1. Teaching device
 
 --
 
-1. Intervention (raconter)
+1. Intervention
 
 --
 
-1. Résultats (commenter)
+1. Results
 
 --
 
-1. Perspectives 
+1. Prospects 
 
 --
 
-1. Montrer les premières images du matériel pour le POC...
-
---
-
-1. Divers.
+1. Next steps
 
 ---
 class: middle, title-slide, inverse
@@ -175,16 +172,17 @@ background-size: cover
 
 # Background
 
-## Quels enjeux ?
+### Challenges
 
-## Quelles opportunités ?
+### Opportunities
 
 ---
 class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Background : enjeux
+### Background
+### Challenges
 
 --
 
@@ -202,20 +200,19 @@ class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Background : quelles Opportunités de la PP
+### Background
+### Opportunities
 
 --
 
-- schémas IBE PGA et moi qui est déjà en anglais 
-- schémas PGA et moi dans CSPS. en mettant en anglais
+<div class="center">
 
-Studies suggest that the ability to create and maintain positive relationships between students plays one of the biggest roles in inclusive classrooms.
-
-
-```{r out.width = '45%', echo=FALSE}
+```{r out.width = '35%', echo=FALSE}
 # local
-knitr::include_graphics("img/bressoud_gay_2022.jpg")
+knitr::include_graphics("img/background-1.jpg")
 ```
+
+</div>
 
 [(Bressoud & Gay, 2022)](https://szh-shop.faros.ch/cms/Artikel-Detail/67565?itemID=REV2022_03)
 
@@ -225,7 +222,7 @@ class: middle, title-slide, inverse
 background-image: url("https://images.unsplash.com/photo-1471286174890-9c112ffca5b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2338&q=80")
 background-size: cover
 
-# Développer une culture des forces
+# Develop a culture of character strengths
 
 ---
 
@@ -233,7 +230,7 @@ class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Développer une culture des forces !
+### Develop a culture of character strengths
 
 --
 
@@ -253,16 +250,21 @@ In this context, strengths can be a very powerful vehicle to establish a greater
 
 ---
 
-class: center
+class: top
 background-image: url("img/background.png")
 background-size: cover
 
-#### Développer une culture des forces
+### Develop a culture of character strengths
 
-```{r out.width = '100%', echo=FALSE}
+<div class="center">
+
+```{r out.width = '80%', echo=FALSE}
 # local
-knitr::include_graphics("img/9.png")
+knitr::include_graphics("img/forces-1.png")
 ```
+
+</div>
+
 [(Bressoud et al., 2019)](https://orfee.hepl.ch/handle/20.500.12162/4159)
 
 ---
@@ -270,40 +272,29 @@ class: title-slide, middle, inverse
 background-image: url("https://images.unsplash.com/photo-1523726491678-bf852e717f6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80")
 background-size: cover
 
-# Dispositif
-
-
----
-class: top
-background-image: url("img/background.png")
-background-size: cover
-
-### Dispositif
-
---
-raconter, montrer des images de ce qui est PREVU. Datas du contexte. Classe pilote. matériel.
-
-Quelles variables DV et IV.
+# Teaching Device
 
 ---
 class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
+
+--
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
@@ -311,7 +302,7 @@ Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources per
 
 ```{r out.width = '90%', echo=FALSE}
 # local
-knitr::include_graphics("img/1.jpg")
+knitr::include_graphics("img/dispo-1.jpg")
 ```
 
 ]
@@ -321,28 +312,27 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
-
 .pull-right[
 
 ```{r out.width = '80%', echo=FALSE}
 # local
-knitr::include_graphics("img/2.jpg")
+knitr::include_graphics("img/dispo-2.jpg")
 ```
 
 ]
@@ -352,20 +342,20 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
@@ -373,7 +363,7 @@ Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources per
 
 ```{r out.width = '60%', echo=FALSE}
 # local
-knitr::include_graphics("img/3.jpg")
+knitr::include_graphics("img/dispo-3.jpg")
 ```
 
 ]
@@ -383,20 +373,20 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
@@ -404,7 +394,7 @@ Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources per
 
 ```{r out.width = '60%', echo=FALSE}
 # local
-knitr::include_graphics("img/4.jpg")
+knitr::include_graphics("img/dispo-4.jpg")
 ```
 
 ]
@@ -414,20 +404,20 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
@@ -435,7 +425,7 @@ Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources per
 
 ```{r out.width = '100%', echo=FALSE}
 # local
-knitr::include_graphics("img/5.jpg")
+knitr::include_graphics("img/dispo-5.jpg")
 ```
 
 ]
@@ -445,20 +435,20 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
@@ -466,7 +456,7 @@ Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources per
 
 ```{r out.width = '70%', echo=FALSE}
 # local
-knitr::include_graphics("img/6.jpg")
+knitr::include_graphics("img/dispo-6.jpg")
 ```
 
 ]
@@ -488,9 +478,19 @@ background-size: cover
 
 --
 
-Method: Qualitative data were collected in a pilot class of 11 to 12-year-old Swiss students including a child on the autism spectrum. Students’ perceptions of peer relatedness were gathered via computerized open-ended questionnaires at the end of the intervention.
+- Year 2016-2017
 
-Montrer combien, comment, par qui, exemples de ce qui s'est passé.
+- 10-12 y.o. children
+
+- 24 pupils (12 &#9792;)
+
+- Special needs : ASD, child psychiatric intervention, psychological care, high potential
+
+- T1 (october 2016) and T2 (april 2017) completed by 14 children
+
+- semi-experimental method
+    - IV : time effect
+    - DV : psychological WB, Social support, school environment
 
 ---
 class: title-slide, middle, inverse
@@ -500,6 +500,49 @@ background-size: cover
 # Results
 
 ---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### Social support
+
+```{r out.width = '60%', echo=FALSE}
+# local
+knitr::include_graphics("img/results-1.png")
+```
+
+---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### psychological WB
+
+```{r out.width = '60%', echo=FALSE}
+# local
+knitr::include_graphics("img/results-2.png")
+```
+
+---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### School environment
+
+```{r out.width = '60%', echo=FALSE}
+# local
+knitr::include_graphics("img/results-3.png")
+```
+
+---
+
 class: top
 background-image: url("img/background.png")
 background-size: cover
@@ -508,49 +551,53 @@ background-size: cover
 
 --
 
-Results highlight that the students were strongly satisfied with this strength-based intervention. This intervention helped children identify their peers through competences rather than weaknesses.
-Thus, they felt that peer relationships were enhanced by strength activities.
+- MAR :
+    - « j’ai trouvé excellent »
+    - « je me suis senti bien mieux »
+    - « je n’avais jamais pensé à certaines de mes forces »
+    - « je crois que je m’entends mieux avec les autres »
+    - «  le travail sur les forces permet aux gens de se mettre ensemble et de se protéger les uns les autres »
 
-plots
+--
 
-commenter.
+- KEN :
+    - « ça sert à montrer qu’on a tous quelque chose de bien »
+    - « Pour moi, je ne veux pas dire »
+    - «  je sais pas »
+    - « le bonheur est une illusion »
+
 
 ---
 
-class: left center
+class: top
 background-image: url("img/background.png")
 background-size: cover
 
 ### Results
 
-```{r out.width = '60%', echo=FALSE}
-# local
-knitr::include_graphics("img/7.png")
-```
+--
 
----
+- GUI :
+    - « On se rend compte qu’on a tous des forces et que personne n’est mauvais »
+    - « Pour bien s’entendre, je comprends l’importance de ne pas se moquer »
 
-class: left center
-background-image: url("img/background.png")
-background-size: cover
+--
 
-### Results
-
-```{r out.width = '60%', echo=FALSE}
-# local
-knitr::include_graphics("img/8.png")
-```
-
+- NOR :
+    - « apprendre à voir qu’on est tous différents »
+    - « je me suis sentie heureuse en faisant cela »
+    - « ça améliore un tout petit peu l’ambiance »
 
 ---
 class: title-slide, middle, inverse
 background-image: url("https://images.unsplash.com/photo-1446769357257-5aa1b1bfcd65?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80")
 background-size: cover
 
-# Perspectives
+# What we learned and where we go
 
-## de manière générale
-## le rôle des enseignants
+### General
+### Towards a feasibility study (POC)
+### The role of teachers
 
 ---
 class: top
@@ -558,36 +605,62 @@ background-image: url("img/background.png")
 background-size: cover
 
 ### Perspectives
+### General
 
 --
 
-We will discuss perspectives on research and strength-based pedagogical activities. In inclusive classrooms, strengths interventions seem to play a crucial role in students’ positive relationships which is believed to have impacts on well-being, academic achievement, decrease of bullying.
-
-Il faut être prudent mais les acteurs veulent qu'on continue.
-
-Alors POC de Anais et Laetitia et montrer de images de comment on a donné du CORPS az programme pour booster les effets.
-
-PEut-être sortir des données de Laetitia pour montrer qu'on doit aller plus loin ???
-
----
-class:top
-background-image: url("img/background.png")
-background-size: cover
-
-### Perspectives : le matériel ne suffit pas !
-
---
-
-Formation des profs.
-
-Prochain design ?
+- Séquence plus longue
+- S’intégrer dans al vie de la classe
+- Offrir des opportunités d’adaptation par les profs
+- Garantir un cadre
+- Entraîner nos mécanismes attentionnels
 
 ---
 class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Perspectives: towards a POC
+### Perspectives
+### Towards a proof of concept
+
+--
+
+.pull-left[
+Un boîte d’activité contient :
+- 1 plateau de jeu de 20 cases
+- 1 poster des 24 forces
+- 30 cartes défis
+- 24 cartes des forces
+- 1 dossier de matériel complémentaire
+- 1 guide de l’enseignant·e
+]
+
+.pull-right[
+
+<div class ="center">
+```{r out.width="70%"}
+include_graphics(path = "img/perspectives-1.png")
+```
+</div>
+
+]
+
+---
+class:top
+background-image: url("img/background.png")
+background-size: cover
+
+### Perspectives
+### The role of teachers
+
+--
+
+- Les croyances et pratiques des enseignant·es ont un impact sur les élèves et leurs apprentissages
+- La conception de l’intelligence, chez les enseignant·es, a des effets sur les résultats des élèves
+- La conception du métier est un élément central de l’efficacité pédagogique
+- Les méthodes ne sont pas intrinsèquement efficaces
+
+e.g., [Hattie (2009)](https://www.researchgate.net/publication/270585193_Visible_Learning_A_Synthesis_of_Over_800_Meta-Analyses_Relating_to_Achievement), [Bressoux (2001)](https://www.researchgate.net/publication/267747865_Reflexions_sur_l'effet-maitre_et_l'etude_des_pratiques_enseignantes), [Elmore (1997)](https://files.eric.ed.gov/fulltext/ED429264.pdf)
 
 ---
 class: title-slide, middle, inverse, hide-logo
@@ -597,11 +670,16 @@ background-size: cover
 # Next steps
 
 ---
-class: top
+class: middle
 background-image: url("img/background.png")
 background-size: cover
 
 ### Next steps
+
+- September 2022
+- Control group : 4-6 classes
+- Experimental group (teacher training and teaching tools) : 4-6 classes
+- 10-12 lessons over 3 months
 
 ---
 
