--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Strengths-based interventions in schools"
+title: "Strength-based interventions in schools"
 subtitle: "A first trial in inclusive context with 11-12 y.o. children"  
 date: "July 1st, 2022"
 congress: "&#x1F1EE;&#x1F1F8;"
@@ -75,7 +75,7 @@ class: left, hide_logo
 background-image: url("img/background.png")
 background-size: cover
 
-### Strengths-based interventions in schools:
+### Strength-based interventions in schools:
 ### A first trial in inclusive context with 11-12 y.o. children
 
 ```{r xaringan-logo, echo=FALSE}
@@ -140,31 +140,31 @@ background-size: cover
 
 --
 
-1. Background
+### Background
 
 --
 
-1. The case of character strengths
+### The case of character strengths
 
 --
 
-1. Teaching device
+### Teaching device
 
 --
 
-1. Intervention
+### Intervention
 
 --
 
-1. Results
+### Results
 
 --
 
-1. Prospects 
+### Prospects 
 
 --
 
-1. Next steps
+### Next steps
 
 ---
 class: middle, title-slide, inverse
@@ -189,11 +189,11 @@ background-size: cover
 
 Schools in Switzerland:
 
-- 26 educational systems
+- 26 educational systems (*cantons*)
 
 - Inclusive policies (special needs)
 
-*"Integrative solutions are preferred over segregated solutions, while respecting the well-being and developmental potential of the child or youth concerned and taking into account the school environment and organization."*
+* Switzerland believes in promoting inclusive settings for SEN pupils. It is a duty to work with children and teens potential and put wellbeing first in school environments and organization.* (see: [edk.ch](https://edudoc.ch/record/87690/files/Sonderpaed_f.pdf))
 ---
 class: top
 background-image: url("img/background.png")
@@ -221,7 +221,7 @@ class: middle, title-slide, inverse
 background-image: url("https://images.unsplash.com/photo-1471286174890-9c112ffca5b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2338&q=80")
 background-size: cover
 
-# Develop a culture of character strengths
+# Developing a culture of character strengths
 
 ---
 
@@ -229,7 +229,7 @@ class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Develop a culture of character strengths
+### Developing a culture of character strengths
 
 --
 
@@ -245,24 +245,24 @@ background-size: cover
 
 - **Potential impact in inclusive settings on quality of life, affiliation needs, prosocial behaviour,...**
 
----
+<!-- --- -->
 
-class: top
-background-image: url("img/background.png")
-background-size: cover
+<!-- class: top -->
+<!-- background-image: url("img/background.png") -->
+<!-- background-size: cover -->
 
-### Develop a culture of character strengths
+<!-- ### Develop a culture of character strengths -->
 
-<div class="center">
+<!-- <div class="center"> -->
 
-```{r out.width = '80%', echo=FALSE}
-# local
-knitr::include_graphics("img/forces-1.png")
-```
+<!-- ```{r out.width = '80%', echo=FALSE} -->
+<!-- # local -->
+<!-- knitr::include_graphics("img/forces-1.png") -->
+<!-- ``` -->
 
-</div>
+<!-- </div> -->
 
-[(Bressoud et al., 2019)](https://orfee.hepl.ch/handle/20.500.12162/4159)
+<!-- [(Bressoud et al., 2019)](https://orfee.hepl.ch/handle/20.500.12162/4159) -->
 
 ---
 class: title-slide, middle, inverse
@@ -481,15 +481,15 @@ background-size: cover
 
 - 24 pupils (12 &#9792;)
 
-- Special needs: ASD, child psychiatric intervention, psychological care, high potential
+- Special needs: ASD, psychiatric/therapeutic follow-up, high potential
 
 - 5 x 45 min lessons (1 lesson by step)
 
 - T1 (october 2016) and T2 (april 2017) totally completed by 14 children
 
-- semi-experimental method
+- Semi-experimental method
     - IV: Time effect
-    - DV: Psychological WB, Social support, School environment
+    - DV: WB, Social support, School environment
 
 ---
 class: title-slide, middle, inverse
@@ -519,7 +519,7 @@ background-image: url("img/background.png")
 background-size: cover
 
 ### Results
-### psychological WB
+### WB
 
 ```{r out.width = '50%', echo=FALSE}
 # local
@@ -559,12 +559,12 @@ background-size: cover
     
     - "I think I get along better with others."
     
-    - "Strengths use allows people to come together and protect each other."
+    - "Using strengths allows people to come together and protect each other."
 
 --
 
 - KEN:
-    - "It serves to show that we all have something good."
+    - "It helps to show that we all have something good."
     
     - "Happiness is an illusion."
 
@@ -579,7 +579,7 @@ background-size: cover
 --
 
 - GUI:
-    - "We realize that we all have strengths and no one is bad."
+    - "We realize that we all have strengths and no one is stupid."
     
     - "To get along well, I understand the importance of not making fun of each other."
 
@@ -599,7 +599,6 @@ background-size: cover
 
 # What we learned and where we go
 
-### General
 ### Towards a feasibility study (POC)
 ### The role of teachers
 
@@ -609,19 +608,17 @@ background-image: url("img/background.png")
 background-size: cover
 
 ### Perspectives
-### General
+### Main keypoints
 
 --
 
-- Longer sequence
+- Designing a longer programme
 
-- Integrate into the life of the classroom
+- Integrating it into the life of the classroom
 
-- Provide opportunities for adaptation by teachers
+- Providing flexibilities for teachers
 
-- Provide a framework
-
-- Train our attentional mechanisms
+- Providing an evidence based framework for teachers
 
 ---
 class: top
@@ -634,8 +631,8 @@ background-size: cover
 --
 
 .pull-left[
-An activity box contains:
-- 1 game board with 20 steps
+A pedagogical material:
+- 1 activity board
 
 - 1 poster of the 24 strengths
 
@@ -643,7 +640,7 @@ An activity box contains:
 
 - 24 strengths cards
 
-- 1 folder of supplementary materials
+- Extra material
 
 - 1 teacher's guide
 ]
@@ -668,13 +665,13 @@ background-size: cover
 
 --
 
-- Teachers' beliefs and practices have an impact on students and their learning
+- Teachers' beliefs and practices have an impact on students and their learning processes
 
 - Teachers' conceptions of intelligence affect student achievement
 
-- Own beliefs about what is teachinge is central to instructional effectiveness
+- Teachers' beliefs about their job impact interventions effectiveness
 
-- Methods are not inherently effective
+- &#x1f525; Methods are not (*or may not be*) inherently effective &#x1f525;
 
 e.g., [Hattie (2009)](https://www.researchgate.net/publication/270585193_Visible_Learning_A_Synthesis_of_Over_800_Meta-Analyses_Relating_to_Achievement), [Bressoux (2001)](https://www.researchgate.net/publication/267747865_Reflexions_sur_l'effet-maitre_et_l'etude_des_pratiques_enseignantes), [Elmore (1997)](https://files.eric.ed.gov/fulltext/ED429264.pdf)
 
@@ -694,9 +691,9 @@ background-size: cover
 
 - September 2022
 
-- Control group : 4-6 classes
+- Control group: 4-6 classes
 
-- Experimental group (teacher training and teaching tools) : 4-6 classes
+- Experimental group (teacher training and material): 4-6 classes
 
 - 10-12 lessons over 3 months
 
